- establishing 'metric-unit' component; - shifting proper styling units from 'page.module.css' to 'metricUnit.module.css' ; - camelCase Convention for 'metricUnit' styling; - metricData for 'offer_2' page; - css corrections for the 'metric unit'; - styling 'metric-unit' in 'offer2' page;

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,31 +1,5 @@
 
   
-  .metric {
-    display: inline-block;
-    width: 750px;
-    margin-top: 50px;
-  }
-  
-  .metric-icon {
-    float: left;
-    /*margin-top: 100px;*/
-  }
-  
-  .metric-info {
-    float: left;
-    margin-left: 150px;
-    width: 400px;
-  }
-  
-  .metric-info p {
-    width: 400px;
-    font-weight: 700;
-    margin-top: -20px;
-  }
-  
-  .metric-info h2 {
-    font-size: 40px;
-  }
   
   /*---------------------------------------*/
   
